Update game version and bump to 0.6.6

--- a/CarryCapacity.csproj
+++ b/CarryCapacity.csproj
@@ -2,11 +2,11 @@
 	<PropertyGroup>
 		
 		<AssemblyTitle>CarryCapacity</AssemblyTitle>
-		<Authors>copygirl</Authors>
-		<Version>0.6.5</Version>
+		<Authors>copygirl,NerdScurvy</Authors>
+		<Version>0.6.6</Version>
 		
 		<Description>Vintage Story mod which adds the capability to carry various things</Description>
-		<RepositoryUrl>https://github.com/copygirl/CarryCapacity</RepositoryUrl>
+		<RepositoryUrl>https://github.com/NerdScurvy/CarryCapacity</RepositoryUrl>
 		
 		<TargetFramework>net461</TargetFramework>
 		<LangVersion>latest</LangVersion>
